--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.7.2",
+    "@justinribeiro/lite-youtube": "^1.6.0",
     "bootstrap": "^5.3.3",
     "stylelint-order": "^6.0.4"
   }
